--- a/views/post.erb
+++ b/views/post.erb
@@ -11,7 +11,7 @@
     </div>
     <div id="images">
       <% @images.each do |image| %>
-          <a href="<%= image.url %>"><img src="<%= image.url %>"/></a>
+          <div class="polaroid"><a href="<%= image.url %>"><img src="<%= image.url %>"/></a></div>
       <% end %>
     </div>
     <div id="time">
