--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -21,24 +21,25 @@ html {
 
 .polaroid img {
     border: 10px solid #fff;
-    /*border-bottom: 45px solid #fff;*/
-    -webkit-box-shadow: 3px 3px 3px #777;
-    -moz-box-shadow: 3px 3px 3px #777;
-    box-shadow: 3px 3px 3px #777;
+    border-bottom: 45px solid #fff;
+    -webkit-box-shadow: 4px 4px 6px rgba(0,0,0,.3);
+    -moz-box-shadow: 4px 4px 6px rgba(0,0,0,.3);
+    box-shadow: 4px 4px 6px rgba(0,0,0,.3);
 }
 
 .polaroid p {
     position: absolute;
     text-align: center;
     width: 100%;
-    bottom: 0px;
-    /*font: 400 18px/1 'Kaushan Script', cursive;*/
-    color: #888;
+    bottom: 0;
+    font: 400 24px/.5 'Permanent Marker', cursive;
+    color: #464646;
 }
 
 img {
-    height: 350px;
-    margin: 20px;
+    height: 750px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #time {
