--- a/views/post.erb
+++ b/views/post.erb
@@ -3,12 +3,15 @@
 <head>
   <title>VHT Feed</title>
   <link rel="stylesheet" href="/stylesheets/post.css"/>
+  <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-    <div id="message">
-      <%= @post.body %>
-    </div>
+    <% if @images.length <= 0 %>
+        <div id="message">
+          <%= @post.body %>
+        </div>
+    <% end %>
     <div id="images">
       <% @images.each do |image| %>
           <div class="polaroid"><a href="<%= image.url %>"><img src="<%= image.url %>"/></a></div>
