--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,4 +1,4 @@
 <script type="text/javascript" src="/javascripts/posts.js"></script>
-<div id="posts_title">vht feed</div>
+<div id="posts_title">VHT Feed</div>
 <div id="posts">
 </div>
