adding popup and default image

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,9 +7,11 @@
   <link href='http://fonts.googleapis.com/css?family=Jura:500' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="/javascripts/jquery.fittext.js"></script>
+  <script type="text/javascript" src="/javascripts/jquery.magnific-popup.min.js"></script>
 </head>
 <body>
     <%= yield %>
