--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="/javascripts/posts.js"></script>
+<input id="admin" type="hidden" value="<%= @admin %>" />
 <div id="posts_title">VHT Feed</div>
 <div id="posts">
 </div>
